--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,11 +23,6 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
-        /* Fix for potential blank screen during hydration */
-        #root:empty {
-            background: #f8fafc;
-            min-height: 100vh;
-        }
     </style>
 <script type="importmap">
 {
@@ -44,7 +40,6 @@
 </head>
 <body class="bg-slate-50 dark:bg-slate-950">
     <div id="root"></div>
-    <!-- Vite handles the transformation of .tsx to .js automatically -->
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
 </body>
 </html>
