--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,12 +9,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
+        :root {
+          --app-bg-light: #f8fafc;
+          --app-bg-dark: #020617;
+          --card-bg-light: #ffffff;
+          --card-bg-dark: #0f172a;
+          --text-primary-light: #0f172a;
+          --text-primary-dark: #f8fafc;
+          --text-secondary-light: #64748b;
+          --text-secondary-dark: #94a3b8;
+          --accent: #6366f1;
+        }
+
         body {
             font-family: 'Inter', sans-serif;
             user-select: none;
             -webkit-tap-highlight-color: transparent;
             overscroll-behavior-y: contain;
+            background-color: var(--app-bg-light);
+            color: var(--text-primary-light);
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
+
+        .dark body {
+            background-color: var(--app-bg-dark);
+            color: var(--text-primary-dark);
+        }
+
         .no-scrollbar::-webkit-scrollbar {
             display: none;
         }
@@ -23,7 +43,40 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
+
+        /* Better input visibility */
+        input::placeholder {
+            color: var(--text-secondary-light);
+            opacity: 0.5;
+        }
+        .dark input::placeholder {
+            color: var(--text-secondary-dark);
+            opacity: 0.5;
+        }
+
+        /* Fix for mobile autofill/dark mode input backgrounds */
+        input:-webkit-autofill,
+        input:-webkit-autofill:hover, 
+        input:-webkit-autofill:focus {
+          -webkit-text-fill-color: inherit !important;
+          -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+          transition: background-color 5000s ease-in-out 0s !important;
+        }
     </style>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            colors: {
+              slate: {
+                950: '#020617',
+              }
+            }
+          }
+        }
+      }
+    </script>
 <script type="importmap">
 {
   "imports": {
@@ -38,7 +91,7 @@
 }
 </script>
 </head>
-<body class="bg-slate-50 dark:bg-slate-950">
+<body>
     <div id="root"></div>
     <script type="module" src="./main.tsx"></script>
 </body>
